differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr35445.c-5.4.0-2.out.txt
pr35445.c:6:5: error: conflicting types for ‘i’
 int i[] = { 0 };  
     ^
pr35445.c:5:12: note: previous declaration of ‘i’ was here
 extern int i;  
            ^
